--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>KPP Web</title>
+    <title>KPP The Web</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
